<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.alarm.AlarmActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm"
            android:textColor="@color/colorText"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="2dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_stop_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_today"
            android:textColor="@color/colorTextSecondary" />

        <Button
            android:id="@+id/btn_start_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/why_not"
            android:textColor="@color/colorTextSecondary" />
    </LinearLayout>
</LinearLayout>