<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:expandedTitleMarginBottom="28dp"
            app:expandedTitleMarginStart="72dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:id="@+id/user_detail"
                    android:orientation="vertical"
                    android:gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/avatar_detail"
                        android:layout_width="100dp"
                        android:layout_height="100dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/full_name_detail"
                        android:gravity="center"
                        android:textColor="@color/colorTextSecondary"
                        android:text="@string/full_name"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/follow_repo_detail"
                        android:text="@string/follow_and_repo"
                        android:textColor="@color/colorTextTertiary"
                        android:gravity="center"
                        android:layout_marginTop="10dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/company_detail"
                        android:text="@string/company"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorTextTertiary"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/location_detail"
                        android:text="@string/location"
                        android:gravity="center"
                        android:textColor="@color/colorTextTertiary"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressbar_detail"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/follow_tab_navigation_detail"
            app:menu="@menu/navigation_followers_following"
            android:layout_gravity="bottom"
            android:background="@color/colorAccent"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>